# skew

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  Makefile  changelog.md  pyproject.toml
docs/: .buildinfo  api.html  changelog.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html  skew.html
docs/_modules/skew/: awsclient.html  config.html
docs/_modules/skew/arn/: arn.html
docs/_modules/skew/boto/: client.html  utility.html
docs/_modules/skew/resources/: aws.html  definition.html  json_dump.html  resource.html
docs/_sources/: api.rst.txt  index.rst.txt
skew/: __init__.py  __main__.py  awsclient.py  cli.py  config.py  exception.py
skew/arn/: __init__.py  account.py  arn.py  component.py  provider.py  region.py  resource.py  scheme.py  service.py
skew/boto/: __init__.py  client.py  utility.py
skew/resources/: __init__.py  definition.py  json_dump.py  resource.py
skew/resources/aws/: __init__.py  autoscaling.py  cloudfront.py  cloudsearch.py  cloudtrail.py  cloudwatch.py  ecr.py  efs.py  elasticache.py  elasticbeanstalk.py  elbv2.py  es.py  firehose.py  iam.py  kms.py  lambda.py  opsworks.py  rds.py  redshift.py  route53.py  s3.py  ses.py  sns.py  states.py  support.py
sphinx/: conf.py
tests/unit/: test_arn.py  test_arn_component.py  test_config.py  test_resource.py  test_version.py
