[tool.poetry]
name = "skew"
version = "1.0.0"
description = "A flat address space for all your AWS resources."
license = "Apache License 2.0"
authors = ["Mitch Garnaat <mitch@garnaat.com>", "GUIBERT Jerome <jguibert@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/geronimo-iia/skew"
documentation = ""
repository = "https://gaas.canal-plus.com/projects/DATA/repos/datalake-airflow-dags"
keywords = ["skew", "dags"]
classifiers = [
    # update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3"
]

[tool.poetry.dependencies]
python = "^3.6"
boto3="1.16.35"
PyYAML="5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mock="4.0.3"
nose="1.3.7"
tox="3.20.1"
placebo="0.9.0"
coverage="*"
python-coveralls="*"
black = "=19.3b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# see https://black.readthedocs.io/en/stable/
target-version = ["py38"]
skip-string-normalization = true
line_length = 120

[tool.coverage.run]
# see https://coverage.readthedocs.io/en/coverage-5.0.3/config.html
branch = true
source = ["skew"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
# see https://coverage.readthedocs.io/en/coverage-5.0.3/config.html
exclude_lines =[
    "pragma: no cover",
    "raise NotImplementedError"]

