[tool.poetry]
name = "skew"
version = "1.0.0"
description = "A flat address space for all your AWS resources."
license = "Apache License 2.0"
authors = ["Mitch Garnaat <mitch@garnaat.com>", "GUIBERT Jerome <jguibert@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/geronimo-iia/skew"
documentation = ""
repository = "https://github.com/geronimo-iia/skew"
keywords = ["skew", "aws"]
classifiers = [
    # update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3"
]

[tool.poetry.scripts]
skew = 'skew.cli:main'

[tool.poetry.dependencies]
python = "^3.6"
boto3="1.16.35"
PyYAML="5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6" # pytest: simple powerful testing with Python
mock="4.0.3"
nose="1.3.7"
tox="3.20.1"
placebo="0.9.0"
python-coveralls="*"
coverage = {version = "^5", extras = ["toml"]} # Code coverage measurement for Python

black = "^20.8b1" # The uncompromising code formatter.
isort = "^5.6.4" #A Python utility / library to sort Python imports.
# https://flakehell.readthedocs.io/
flakehell = "^0.7.1"
# https://github.com/DmytroLitvinov/awesome-flake8-extensions
flake8-bugbear = "^20.11.1"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.3.1"
flake8-docstrings = "^1.5.0"
flake8-eradicate = "^1.0.0"
#flake8-isort = "^4.0.0"
flake8-mutable = "^1.2.0"
flake8-pytest-style = "^1.3.0"
flake8-spellcheck = "^0.20.0"
pep8-naming = "^0.11.1"

# Documentation
sphinx = "^2.3.1"
sphinx_rtd_theme = "^0.4.3"
m2r = "^0.2.1"  # M2R converts a markdown file including reStructuredText (rst)
autodocsumm = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# see https://black.readthedocs.io/en/stable/
target-version = ["py38"]
skip-string-normalization = true
line_length = 120

[tool.isort]
# see https://timothycrosley.github.io/isort/
combine_as_imports = true
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
force_grid_wrap = 0
ensure_newline_before_comments = true
line_length = 120

[tool.flakehell]
exclude = ["README.md"]
format = "colored"
max_line_length = 120
show_source = true
max-complexity = 18
docstring-convention = "google"
#whitelist = "../../allowlist.txt"

[tool.flakehell.plugins]
#flake8-bandit = ["+*", "-S322"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*", "-A003"]
flake8-comprehensions = ["+*"]
#flake8-darglint = ["+*", "-DAR201"]
# explicitly disable plugin
flake8-docstrings = ["+*", "-D107", "-D100", "-D105", "-D102", "-D106", "-D101"]
flake8-eradicate = ["+*"]
flake8-isort = ["+*"]
flake8-mutable = ["+*"]
flake8-pytest-style = ["+*"]
flake8-spellcheck = ["+*", "-SC200", "-SC100"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*", "-W503"]
pylint = ["+*"]


[tool.coverage.run]
# see https://coverage.readthedocs.io/en/coverage-5.0.3/config.html
branch = true
source = ["skew"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
# see https://coverage.readthedocs.io/en/coverage-5.0.3/config.html
exclude_lines =[
    "pragma: no cover",
    "raise NotImplementedError"]
